Modificando código para o endpoint de dados-sensor funcionar corretamente